--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,231 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a {
+  text-decoration: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+  font-family: Poppins;
+  color: #212121;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  background-color: #f5f7fa;
+}
+
+.loader {
+  display: grid;
+  place-content: center;
+}
+
+header {
+  font-family: Poppins;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  margin: 0 0 10px 0;
+  padding: 10px 20px;
+  justify-content: space-between;
+}
+
+header h1 {
+  font-size: 25px;
+  transition: ease 0.2s;
+}
+
+header h1:hover {
+  color: #1e68d8;
+}
+
+header .logoContainer {
   align-items: center;
+  display: flex;
+}
+
+header a img {
+  max-width: 20px;
+  height: auto;
+  margin: -3px 5px 0 0;
+}
+
+header ul {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+header ul li {
+  color: #212121;
+  list-style: none;
+  margin: 0 20px 0 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header form input {
+  width: 350px;
+  height: 35px;
+  border: 1px solid #dbe4ef;
+  border-radius: 3px;
+  font-family: "Poppins";
+  padding: 0 10px;
+  background-color: #e5e9ef;
+  transition: ease 0.5s;
+}
+
+header form input:focus {
+  border: 1px solid #2a8cf6;
+  box-shadow: 0px 0px 11px -3px rgb(30 104 216 / 51%);
+}
+
+textarea:focus,
+input:focus {
+  outline: none;
+}
+
+.MovieItem {
+  color: #212121;
+  padding: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.MovieItemDetails {
+  background-color: #eaedf2;
+  border-radius: 4px;
+  padding: 20px;
+  flex-direction: row;
+  display: flex;
+  align-items: stretch;
+  flex: 0 0 100%;
+  margin-bottom: 20px;
+}
+
+.MovieItemDetails .moviePoster {
+  width: 300px;
+  border-radius: 5px;
+  height: auto;
+  flex: 1;
+  margin: 0 50px 0 0;
+}
+
+.MovieItemDetailsText {
+  flex: 2;
+  flex-direction: column;
+}
+
+.MovieItemDetails h1 {
+  font-size: 45px;
+  margin: 0 20px 5px 0;
+}
+
+.movieItemDetailTop {
+  display: flex;
+  align-items: center;
+}
+
+.rating img {
+  margin: 0 5px 0 0;
+}
+
+.rating span {
+  font-family: Poppins;
+  font-size: 24px;
+}
+
+.MovieItemDetails h3 {
+  font-size: 20px;
+  font-family: "Poppins";
+  font-weight: 500;
+  margin: 0 0 10px 0;
+}
+
+.MovieItemDetails p {
+  margin: 0 0 20px 0;
+  font-family: "Open Sans";
+  line-height: 1.6;
+}
+
+.MovieItemDetails ul {
+  margin: 0 0 15px 0;
+}
+
+.MovieItemDetails ul li {
+  display: inline-block;
+  list-style: none;
+  margin: 0 5px 0 0;
+  padding: 5px 10px;
+  border-radius: 10px;
+  color: #fff;
+  background-color: #057af7d6;
+  font-size: 12px;
+}
+
+.providerList div {
+  display: inline-block;
+}
+
+.providerList img {
+  max-width: 50px;
+  height: auto;
+  margin: 0 10px 0 0;
+}
+
+.listItem {
+  padding: 0 20px;
+}
+
+.movie-list-container {
+  width: 100%;
+  display: flex;
+  justify-self: center;
+}
+
+.movie-list h1 {
+  flex: 0 1 100%;
+  margin: 0 0 30px 0px;
+  font-weight: 200;
+}
+
+.movie-list {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.movie-item {
+  list-style: none;
+  margin: 0 20px 25px 0;
+  border-radius: 5px;
+  width: 250px;
+  height: 450px;
+  background-color: #057dfe;
+  transition: ease 0.3s;
+}
+
+.movie-item:hover {
+  background-color: #0065d1;
+  box-shadow: 0px 0px 15px 2px rgba(0, 48, 255, 0.5);
+}
+
+.movie-item img {
+  width: 100%;
+  height: auto;
+  border-radius: 5px 5px 0 0;
+}
+
+.movie-item span {
+  display: block;
+  padding: 10px 0 10px 0;
+  font-size: 16px;
+  color: #fff;
+  text-align: center;
+  font-family: Poppins;
+  font-weight: 400;
 }
