--- a/src/App.css
+++ b/src/App.css
@@ -250,3 +250,64 @@ input:focus {
   font-family: Poppins;
   font-weight: 400;
 }
+
+@media only screen and (max-width: 600px) {
+  header {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  header .logoContainer {
+    margin: 15px 0;
+  }
+
+  .searchAndLinks {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .searchBox {
+    margin: 0;
+  }
+
+  .movie-list {
+    justify-content: space-around;
+  }
+
+  .listItem {
+    padding: 0 10px;
+  }
+
+  .movie-item {
+    margin: 0 0 25px 0;
+    width: 170px;
+    height: 334px;
+  }
+
+  .movie-item span {
+    font-size: 14px;
+  }
+
+  .MovieItemDetails {
+    flex-direction: column;
+    place-items: center;
+  }
+
+  .MovieItemDetails .moviePoster {
+    margin: 0;
+  }
+  .MovieItemDetails h1 {
+    font-size: 1.6em;
+  }
+
+  .movieItemDetailTop {
+    flex-direction: column;
+    place-items: unset;
+    margin-bottom: 0.5em;
+  }
+
+  header form input {
+    height: 40px;
+    margin-bottom: 20px;
+  }
+}
