--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,16 @@ header ul li {
   margin: 0 20px 0 0;
 }
 
+header form button {
+  cursor: pointer;
+  height: 35px;
+  border: none;
+  padding: 0 20px;
+  background-color: #057dfe;
+  color: #ffffff;
+  border-radius: 3px;
+}
+
 header form input {
   width: 350px;
   height: 35px;
@@ -76,6 +86,7 @@ header form input {
   padding: 0 10px;
   background-color: #e5e9ef;
   transition: ease 0.5s;
+  margin: 0 10px 0 0;
 }
 
 header form input:focus {
@@ -309,5 +320,11 @@ input:focus {
   header form input {
     height: 40px;
     margin-bottom: 20px;
+    width: 240px;
+  }
+
+  header form button {
+    height: 40px;
+    padding: 0 10px;
   }
 }
