css fix + provider unique key prop

--- a/src/App.css
+++ b/src/App.css
@@ -228,7 +228,7 @@ input:focus {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .movie-item {
