--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,14 @@ a {
   text-decoration: none;
 }
 
+a:link {
+  color: black;
+}
+
+a:visited {
+  color: black;
+}
+
 h1 {
   font-family: Poppins;
   color: #212121;
@@ -214,21 +222,20 @@ input:focus {
 
 .movie-list-container {
   width: 100%;
-  display: flex;
-  justify-self: center;
 }
 
-.movie-list h1 {
+.movie-list-container h1 {
   flex: 0 1 100%;
   margin: 0 0 30px 0px;
   font-weight: 200;
+  font-size: 24px;
 }
 
 .movie-list {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 .movie-item {
@@ -237,13 +244,10 @@ input:focus {
   border-radius: 5px;
   width: 250px;
   height: 450px;
-  background-color: #057dfe;
   transition: ease 0.3s;
 }
 
 .movie-item:hover {
-  background-color: #0065d1;
-  box-shadow: 0px 0px 15px 2px rgba(0, 48, 255, 0.5);
 }
 
 .movie-item img {
@@ -256,8 +260,6 @@ input:focus {
   display: block;
   padding: 10px 0 10px 0;
   font-size: 16px;
-  color: #fff;
-  text-align: center;
   font-family: Poppins;
   font-weight: 400;
 }
@@ -290,9 +292,9 @@ input:focus {
   }
 
   .movie-item {
-    margin: 0 0 25px 0;
-    width: 170px;
-    height: 334px;
+    margin: 0 0 20px 0;
+    width: 160px;
+    height: auto;
   }
 
   .movie-item span {
@@ -327,4 +329,8 @@ input:focus {
     height: 40px;
     padding: 0 10px;
   }
+}
+
+#search-form {
+  display: flex;
 }
